fixing Bug Callapse tab, fix #1876
Former-commit-id: 97db8484181d363473639d946164d7cea7b8f5d3 [formerly 4367d260b8c0bf585bee2b97e95c2a6932e6f74e] [formerly b5589ebb07df0c5710ca71565b0a155b74666823 [formerly 50f1ab736b93ecc2635cf3da9c9e1b8101478f8b]]
Former-commit-id: 1fe71fbe3b2b037ebdd8b59f89fae185dd9f62d3 [formerly d21f2333deccd9ad44ccbad69bf7b26e2ef76d72]
Former-commit-id: ddb2613d4fd65b8662422416302885da0f1654ec

--- a/templates/base.html
+++ b/templates/base.html
@@ -607,14 +607,27 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
             $('.page-sidebar-menu .title').removeClass('sideWithoutText');
             $(".page-sidebar-menu").css('width','160px');
             $(".page-content").css('marginLeft','190px');
+            $('.maxminButton').removeClass('fa-caret-right');            
+            $('.maxminButton').addClass('fa-caret-left');
           }else{
             console.log("in remove class");
             $('.page-sidebar-menu .title').addClass('sideWithoutText');
+            $('.maxminButton').removeClass('fa-caret-left');
+            $('.maxminButton').addClass('fa-caret-right');            
             $(".page-sidebar-menu").css('width','50px');
             $(".page-content").css('marginLeft','80px');
           };
           
         });
+       $(document).on('DOMNodeInserted', function(e) {
+          if ($(e.target).is('.page-content')) {
+               if($('.page-sidebar-menu .title').hasClass('sideWithoutText')) {
+                  $(".page-content").css('marginLeft','80px');
+                }else{                 
+                  $(".page-content").css('marginLeft','190px');
+                };
+            }
+      });
        $( ".sidemenuitem" ).hover(
           function() {
             var el=$( this ).find( ".maxminButton" );
