--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1274,6 +1274,7 @@
                                                       <option value="VND">₫ - VND</option>
                                                       <option value="XCD">$ - XCD</option>
                                                       <option value="ZAR">R - ZAR</option>
+                                                      <option value="DZD">د.ج - DZD</option>
                                                     </select>
                                                     </div>
                                                   </div>
