--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -69,6 +69,9 @@
                 <a class="headerBtn" title="Delete"  ng-hide=" selectedCards.length==0" ng-click="editbeforedeleteselection()"> 
                       <i class="fa fa-trash-o"></i>
                 </a>
+                   <a href="" class="" title="{{_('Synchronize my contact with google')}}" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="GontactModal()" > 
+                      <i class="fa fa-refresh" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>
                 <!--<a class="" title="More" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
                       <i class="fa  fa-ellipsis-horizontal" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>-->
@@ -1009,6 +1012,47 @@
                             </div>
                           </div>
                         </div>
+
+
+
+
+<!-- Gontact Modal -->
+<div id="GontactModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel" class="modal-title">{{_("Synchronize my contacts with google : ")}} 
+                </h3>
+            </div>
+            <div class="modal-body">
+                <form id="addLead" name="addaccount" ng-keyup="convertLeadOnKey(lead)" class="form-horizontal">
+
+
+                    <p>{{_('Converting a lead will create a person contact and company. All documents,notes,tasks and events will be transfered. You should only convert a lead if it is qualified.')}}</p>
+
+
+
+
+
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+
+                <input  ng-click="SynchronizeWithGoogle()" type="submit" class="btn green" value="Synchronize">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
+            </div>
+            </form>
+        </div>
+    </div>
+</div>
+<!-- sharing modal -->
+
+
+
+
+
+
 
 <!-- sharing modal -->
 
