hide sync contact with gogle contact
Former-commit-id: 1c4bf2f54129ac717a285f03e37ccfc49cfbe1ac [formerly 844f0cba5b0f8b6847ac6dc5731702621bb8b1be] [formerly 391cc8b1b0075a54092b3abb4394194e1f867dbe [formerly 6d2a4b4ac9a0775a100fef2b8ebe4fb1670cb6d1]]
Former-commit-id: df43e815c1e0b553b1cfcdaf4c5d37c5f912c204 [formerly 151a31958e7b91800f85df66b8d9b030f42ce0f8]
Former-commit-id: 9d029e307d5e92e1a7d0c12c59c612319b6cea45

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -69,9 +69,9 @@
                 <a class="headerBtn" title="Delete"  ng-hide=" selectedCards.length==0" ng-click="editbeforedeleteselection()"> 
                       <i class="fa fa-trash-o"></i>
                 </a>
-                   <a href="" class="" title="{{_('Synchronize my contact with google')}}" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="GontactModal()" > 
+                <!--   <a href="" class="" title="{{_('Synchronize my contact with google')}}" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="GontactModal()" > 
                       <i class="fa fa-refresh" style="padding-top: 6px; font-size: 16px;"></i>
-                </a>
+                </a> -->
                 <!--<a class="" title="More" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
                       <i class="fa  fa-ellipsis-horizontal" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>-->
