Change the message of synchronazing google contacts
Former-commit-id: 91cd7cb2c866378c17d5134390b4ad82e9ee1d5e [formerly e05c1ee43c37c76e2ec56bd40e3a1a941d4f9ab8] [formerly 971e8cdb9bcb08a84a1cf5cb5f179a777a4fbd79 [formerly d9084821ce27fce063903d26c5dc87a9361daa27]]
Former-commit-id: 72635439125cb3397a2a61eab9604b7cb1014c78 [formerly 4018c6e98f5ab8bd1d412a4ea65fe99632f2b030]
Former-commit-id: 6553cabd5f938eca8f91cdbb56278d1fc76a5e8a

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -69,9 +69,9 @@
                 <a class="headerBtn" title="Delete"  ng-hide=" selectedCards.length==0" ng-click="editbeforedeleteselection()"> 
                       <i class="fa fa-trash-o"></i>
                 </a>
-                <!--   <a href="" class="" title="{{_('Synchronize my contact with google')}}" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="GontactModal()" > 
+                   <a href="" class="" title="{{_('Synchronize my contact with google')}}" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="GontactModal()" > 
                       <i class="fa fa-refresh" style="padding-top: 6px; font-size: 16px;"></i>
-                </a> -->
+                </a> 
                 <!--<a class="" title="More" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
                       <i class="fa  fa-ellipsis-horizontal" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>-->
@@ -1022,14 +1022,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">{{_("Synchronize my contacts with google : ")}} 
+                <h3 id="myModalLabel" class="modal-title">{{_("Synchronize my contacts with google contacts : ")}} 
                 </h3>
             </div>
             <div class="modal-body">
                 <form id="addLead" name="addaccount" ng-keyup="convertLeadOnKey(lead)" class="form-horizontal">
 
 
-                    <p>{{_('Converting a lead will create a person contact and company. All documents,notes,tasks and events will be transfered. You should only convert a lead if it is qualified.')}}</p>
+                    <p>{{_('Synchronize your ioGrow Contacts with Google Caontacts.')}}</p>
 
 
 
