send email invitation user with gcdc not with gmail, fix #1924
Former-commit-id: 2d6678106aa25981e682c995d03cb55671d5fd80 [formerly 96df90a588f10de3751076f8db32601eb1c4779b] [formerly a33e187d8891084ca96cc419c84a20e0ab7c2f82 [formerly 782a9c09e2baa933a412d02b0e3b92cb8cc49b01]]
Former-commit-id: ed469c40294b264f5b8b7885aaf363f8e42c8798 [formerly 2bacba5c33537d2b13b247fa4018f80267829ac7]
Former-commit-id: c352825842e83d69b58fb1bb528e72dbfa5afc3d

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -1029,7 +1029,7 @@
                 <form id="addLead" name="addaccount" ng-keyup="convertLeadOnKey(lead)" class="form-horizontal">
 
 
-                    <p>{{_('Synchronize your ioGrow Contacts with Google Caontacts.')}}</p>
+                    <p>{{_('Synchronize your ioGrow Contacts with Google Contacts.')}}</p>
 
 
 
