synch google gontact
Former-commit-id: 108955c020f317e28beb230357a5249705861a0f [formerly 9ad00ac3f29c622f59a1db0685fc6d023b3c92bb] [formerly c887819516a7a2a616442aa7d6ae98bf23642ea6 [formerly 918910c42ec5c1efa8104845a8911d0ce39d1b54]]
Former-commit-id: a5a117ee65e418a9d0350654fbd636eb37985a19 [formerly 57f329cddad6066f49f3dc7ba819f5eb4707d0bd]
Former-commit-id: b5f45e62bd460433a407544fc4b12ee9211690b2

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -1022,7 +1022,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">{{_("Synchronize my contacts with google contacts : ")}} 
+                <h3 id="myModalLabel" class="modal-title">{{_("Synchronize my contacts with google contacts, it takes some time, please refresh your breowser to see your contacts : ")}} 
                 </h3>
             </div>
             <div class="modal-body">
