--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -94,6 +94,7 @@
               <div class="form-group row">
                    <div class="col-md-12">
                       <input id="noteBody" ng-blur="updateEvent({'id':event.id,'description':event.description})" class="form-control ng-pristine ng-valid" rows="3" ng-model="event.description">
+
                     </div>
               </div>
               <div class="news-block-tags event-block-title">
@@ -101,7 +102,9 @@
               </div>
               <div class="form-group row">
                     <div class="col-md-12">
-                      <input id="noteBody" ng-blur="updateEvent({'id':event.id,'where':event.where})" class="form-control ng-pristine ng-valid" rows="3" ng-model="event.where">
+                      <input id="pac-input" class="form-control"  ng-model="event.where">
+                       <a href="" ng-click="lunchMaps()">
+                       <i class="glyphicon glyphicon-map-marker" style="color: rgba(0, 26, 131, 0.61); margin-top: -5px;"></i>see on map</a>
                     </div>
               </div>
               <div class="news-block-tags  event-block-title">
