--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -1581,6 +1581,8 @@
         <div class=" inner-addon left-addon" style="margin-top:30px">
          <i class="glyphicon glyphicon-map-marker" style="color: rgba(0, 26, 131, 0.61); margin-top: -5px;"></i>
           <input class="form-control calendar-form-controle" autofocus="" type="text" placeholder="{{_('Where?')}}" id="pac-input2" ng-model="ioevent.where" style="margin-top:15px">
+          <a ng-show="locationShosen" href="" ng-click="lunchMapsCalendar()" style="margin-left: 31px;" >
+                                                   see on map</a>
                   </div>
 
                             <div class=" inner-addon left-addon">
