--- a/templates/base.html
+++ b/templates/base.html
@@ -392,13 +392,13 @@
 
 
 
-  // var ROOT = '/_ah/api';
+  var ROOT = '/_ah/api';
 
 
 
 
 
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+// var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
