--- a/templates/base.html
+++ b/templates/base.html
@@ -392,20 +392,10 @@
 
 
 
-<<<<<<< HEAD
-=======
-  // var ROOT = '/_ah/api';
->>>>>>> b251eabc78f1e312dbedf8066eb8f7ff2cce9b8d
 
-//var ROOT = '/_ah/api';
+var ROOT = '/_ah/api';
 
-<<<<<<< HEAD
-
-
-
-=======
->>>>>>> b251eabc78f1e312dbedf8066eb8f7ff2cce9b8d
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
