--- a/templates/base.html
+++ b/templates/base.html
@@ -394,11 +394,11 @@
 
 
 
-// var ROOT = '/_ah/api';
+var ROOT = '/_ah/api';
 
 
 
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
