adding social links and website on lead and contact import
Former-commit-id: 979f973165721a8014a27fd1c7cb88e600bdc4be [formerly a621e39a476c41977426827d698f6c7a08c8a5bc] [formerly 5e9470f8b007ff84b6819f72d4722b25018d32dd [formerly 84a3a36da631efb308058e1657f84973a92397e3]]
Former-commit-id: c50ddff2417827b2a5f335248c74a3e43c077fb9 [formerly 29a1b03df1c5792189d40f7a68513099542bd176]
Former-commit-id: 7c270a1c28c239dd8a8a9e3db6b0c302f7915fae

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -811,6 +811,9 @@
                                   <option value="phones" ng-selected="<%=column.matched_column == 'phones'%>">Phones</option>
                                   <option value="emails" ng-selected="<%=column.matched_column == 'emails'%>">Emails</option>
                                   <option value="addresses" ng-selected="<%=column.matched_column == 'addresses'%>">Addresses</option>
+                                  <option value="sociallinks" ng-selected="<%=column.matched_column == 'sociallinks'%>">Social links</option>
+                                  <option value="websites" ng-selected="<%=column.matched_column == 'websites'%>">Web sites</option>
+                                  
                                 </select>
                           </div>
                         </td>
