--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -505,10 +505,11 @@
                 <div class="">
                   <div class="blank_slate_arrow"></div>
                   <div class="thumbnail blank_slate_body">
-                    <img class="img-responsive" src="/static/img/leads_blank.png">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ICzy6B4zPEs" frameborder="0" allowfullscreen></iframe>
                     <p class="lead">
-                      {{ _('You have leads coming in from a wide variety of sources. Some leads come from lists you acquired, others from business cards and still more from the "contact us" form on your website. i/oGrow help you organize informations about leads so they can be followed up on and qualified quickly.') }}
+                      {{ _('Immediately start building your leads database by kickstarting ioGrow with an import.') }}
                     </p>
+                    <button ng-click="showImportModal()" class="btn red" style="/* margin-top: -4px; */">Import your leads</button>
                   </div>
                 </div>
               </div>
