add Personal Account Backend API fix #1961
Former-commit-id: bfd507d1802400d0e2b1ffbe7527aa5ec12a087c [formerly ba7263bee943923e4444af5ebe115d57888040e5] [formerly 1b30fc0113352149b5c276d9ce5f5be32e7a6d62 [formerly 7f4af984fd3031b6c6dec025244af0ff95612f5b]]
Former-commit-id: 0720fa07338872b15d180483663de8407574d149 [formerly 179b0f8532013d48a828f26c11a1edc4a3fc261c]
Former-commit-id: 6b3559049155e45837b7a0aba1661e42c11475af

--- a/templates/base.html
+++ b/templates/base.html
@@ -393,23 +393,11 @@
 
 
 
-// var ROOT = '/_ah/api';
+var ROOT = '/_ah/api';
 
-<<<<<<< HEAD
-<<<<<<< HEAD
+
 // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
-
-
-=======
-<<<<<<< HEAD
-=======
->>>>>>> 392acef23fc8000d0843f49aa5255542dce85ff9
-
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
-
-
->>>>>>> e8d584b288159a65c2fae7c131957f3263cb2156
 
 
 
