--- a/templates/base.html
+++ b/templates/base.html
@@ -392,19 +392,12 @@
 
 
 
-
-<<<<<<< HEAD
- var ROOT = '/_ah/api';
-
-=======
+var ROOT = '/_ah/api';
 
 
-//var ROOT = '/_ah/api';
-
->>>>>>> e5cc403f09e92509e1dbf08cc50006ab106c7b46
 
 
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
